# webscraping_default

./: .gitignore  README.md  pyproject.toml
cert/: mitmproxy-ca-cert.pem
src/: get_my_ip.py  ml_search.py
src/mitm/: start.py
src/request/: get_my_ip.py  login_cc.py  ml_search.py  pda_request.py
